# Agentic-AI

./: README.md
01_chainlit_hello/: chatbot.py  main.py
02_hello_agent/: hello.py  pyproject.toml
04_agent_with_history/: hello.py  main.py  pyproject.toml
07_Dataclass/: bad_ex.py  simple_good_ex.py
08_Callable/: main.py
09_Generics/: main.py
Panaversity/01_chainlit_hello/: pyproject.toml
Panaversity/02_hello_agent/: hello.py  main.py
Panaversity/03_chainlit_simple_agent/: hello.py  main.py  pyproject.toml
Panaversity/05_streaming_agent/: hello.py  pyproject.toml
Panaversity/05_streaming_agent/.chainlit/: config.toml
Panaversity/06_tool_call_agent/: hello.py  pyproject.toml
Test Practice/01_uv_simple_app/: main.py  pyproject.toml
Test Practice/01_uv_simple_app/00_uv_simple_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
Test Practice/02_uv_package_app/: pyproject.toml
Test Practice/02_uv_package_app/src/uv_package_app/: __init__.py  main.py
Test Practice/03_hello_agent/: README.md  hello.py  main.py  pyproject.toml
