[project]
name = "uv-package-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Shariq", email = "muhammadshariqfazal@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
uv-package-app = "uv_package_app:main"
uv-package-app-main = "uv_package_app.main:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "ruff>=0.12.12",
]
